tests/ui/cross-crate.stderr
error[E0639]: cannot create non-exhaustive struct using struct expression
 --> tests/ui/cross-crate.rs:5:32
  |
5 | fn ref_cast(s: &str) -> &Struct;
  |                                ^

error[E0639]: cannot create non-exhaustive struct using struct expression
 --> tests/ui/cross-crate.rs:8:44
  |
8 | fn ref_cast_mut(s: &mut str) -> &mut Struct;
  |                                            ^
